# CudaArchitectureSelector

./: CMakeLists.txt  CudaArchitectureSelector.cmake  README.md
example/: CMakeLists.txt
